--- a/cluster.yml
+++ b/cluster.yml
@@ -3,9 +3,9 @@ mesos_version: "0.22.1"
 
 ## The numbers of servers
 ##############################
-zk_n: 1          ## hostname will be zk1, zk2, …
-master_n: 2      ## hostname will be master1,master2,…
-slave_n: 2      ## hostname will be slave1,slave2,…
+zk_n: 1          ## hostname will be zk1, zk2, ...
+master_n: 2      ## hostname will be master1,master2,...
+slave_n: 2      ## hostname will be slave1,slave2,...
 
 ## Memory and Cpus setting(only for virtualbox)
 ##########################################
