--- a/cluster.yml
+++ b/cluster.yml
@@ -1,5 +1,8 @@
 ## Mesos cluster configurations
-mesos_version: "0.22.1"
+mesos_version:    "1.3.1"
+mesos_build:      "1.3.1-2.0.1"
+marathon_version: ""
+chronos_version:  ""
 
 ## The numbers of servers
 ##############################
