--- a/cluster.yml
+++ b/cluster.yml
@@ -1,6 +1,6 @@
 ## Mesos cluster configurations
 mesos_version:    "1.3.1"
-mesos_build:      "1.3.1-2.0.1"
+mesos_build:      "-2.0.1"
 marathon_version: ""
 chronos_version:  ""
 
