--- a/cluster.yml
+++ b/cluster.yml
@@ -1,7 +1,7 @@
 ## Mesos cluster configurations
 mesos_version:    "1.3.1"
 mesos_build:      "-2.0.1"
-marathon_version: ""
+marathon_version: "1.4.7"
 chronos_version:  ""
 
 ## The numbers of servers
